--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/extension-accelerate": "^1.3.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -22,7 +26,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "prisma": "^6.6.0",
     "tailwindcss": "^4.1.4",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
