--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/extension-accelerate": "^1.3.0",
+    "bcryptjs": "^3.0.2",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
