--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/extension-accelerate": "^1.3.0",
     "bcryptjs": "^3.0.2",
+    "jose": "^6.0.10",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
